--- a/test/exercise-one.html
+++ b/test/exercise-one.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>exercise one</title>
-    <link rel="stylesheet" href="/exercise-one.css">
+    <link rel="stylesheet" href="/Users/tongbaongoc/Desktop/what/Tuan-Minh/test/exercise-one.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
@@ -16,7 +16,7 @@
 
     <div class="overall">
         <div>
-            <img src="/Images/185864825_4517577394936302_8215897360164184930_n (1).jpg" height="35px" width=auto>
+            <img src="/Users/tongbaongoc/Desktop/what/Tuan-Minh/test/Images/185864825_4517577394936302_8215897360164184930_n (1).jpg" height="35px" width=auto>
             <div class="box">
                 <div class="title">
                     <h1>
